--- a/.env
+++ b/.env
@@ -7,7 +7,7 @@ APP_URL=http://localhost
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=33061
-DB_DATABASE=dockerApp
+DB_DATABASE=easyLife
 DB_USERNAME=root
 DB_PASSWORD=secret
 
