--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,15 +17,18 @@ services:
       dockerfile: app.docker
     volumes:
       - ./:/var/www
+      - ./migrate.sh:/var/www/migrate.sh
     links:
       - db
     environment:
       - DB_PORT=3306
       - DB_HOST=db
+    command:
+      - migrate.sh
   db:
     image: mysql:5.7
     environment:
       - MYSQL_ROOT_PASSWORD=secret
-      - MYSQL_DATABASE=dockerApp
+      - MYSQL_DATABASE=easyLife
     ports:
       - "33061:3306"
