--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,7 @@
     },
     "autoload": {
         "classmap": [
-            "database"
+            "database", "vendor/google/apiclient/src/Google"
         ],
         "psr-4": {
             "App\\": "app/"
